# kira

./: .gitignore  .pre-commit-config.yaml  README.md  llama_test.py  main.py  playground.py  pyproject.toml
dockerfiles/experiments/: ChessGPT.Dockerfile  Dockerfile  Experiment1.Dockerfile
experiments/: chessGPT.py  data_explorer.ipynb  experiment1.py  generated.mid  music_generation.py
experiments/vg_music_crawler/: crawler.py
experiments/wandb/: latest-run
experiments/wandb/run-20231126_215725-8ouzzy1y/: run-8ouzzy1y.wandb
experiments/wandb/run-20231126_215725-8ouzzy1y/files/: config.yaml  wandb-metadata.json
experiments/wandb/run-20231129_222846-5hr1ieta/: run-5hr1ieta.wandb
experiments/wandb/run-20231129_222846-5hr1ieta/files/: config.yaml  wandb-metadata.json
experiments/wandb/run-20231129_223454-8m69rf7k/: run-8m69rf7k.wandb
experiments/wandb/run-20231129_223454-8m69rf7k/files/: config.yaml  wandb-metadata.json
experiments/wandb/run-20231129_223628-fwm6hs3e/: run-fwm6hs3e.wandb
experiments/wandb/run-20231129_223628-fwm6hs3e/files/: config.yaml  wandb-metadata.json  wandb-summary.json
experiments/wandb/run-20231130_104307-s59aeoan/: run-s59aeoan.wandb
experiments/wandb/run-20231130_173029-xzk6b16v/: run-xzk6b16v.wandb
experiments/wandb/run-20231130_211540-15w2pt6z/: run-15w2pt6z.wandb
experiments/wandb/run-20231130_232510-ej34kgv2/: run-ej34kgv2.wandb
experiments/wandb/run-20231130_232756-n41sx2xz/: run-n41sx2xz.wandb
experiments/wandb/run-20231203_122310-gk3qafqy/: run-gk3qafqy.wandb
kira/: __init__.py  generate.py  model_args.py  state_bug.py  state_bug_2.py  tokenizer.py  train.py
kira/llama/: download.sh
kira/model/: mamba.py  mamba_torch.py  mha.py  mha_old.py  model.py  rope_embeddings.py
kira/models/kira/: kira.py
kira/models/llama/: llama2.py
kira/models/mamba/: mamba.py
kira/modules/: mha.py  rope_embeddings.py
notebooks/: Test1.ipynb
wandb/: latest-run
wandb/run-20231126_210423-dard017f/: run-dard017f.wandb
wandb/run-20231126_210423-dard017f/files/: config.yaml  wandb-metadata.json  wandb-summary.json
wandb/run-20231126_212210-xq0cssv8/: run-xq0cssv8.wandb
wandb/run-20231126_212210-xq0cssv8/files/: config.yaml  wandb-metadata.json  wandb-summary.json
wandb/run-20231126_213127-ygu53j1z/: run-ygu53j1z.wandb
wandb/run-20231126_213127-ygu53j1z/files/: config.yaml  wandb-metadata.json  wandb-summary.json
wandb/run-20231126_222708-eyiaj678/: run-eyiaj678.wandb
wandb/run-20231126_222708-eyiaj678/files/: config.yaml  wandb-metadata.json  wandb-summary.json
wandb/run-20231129_232954-qctiducm/: run-qctiducm.wandb
wandb/run-20231129_232954-qctiducm/files/: config.yaml  requirements.txt  wandb-metadata.json
wandb/run-20231130_084012-imp3l9d6/: run-imp3l9d6.wandb
wandb/run-20231130_084012-imp3l9d6/files/: config.yaml  wandb-metadata.json  wandb-summary.json
(+20 files in other folders)
