[tool.poetry]
name = "kira_llm"
version = "0.1.2"
description = ""
authors = ["Artur A. Galstyan <galstyan.artu@gmail.com>"]
license = "MIT"
readme = "README.md"
packages=[{include="kira"}]
exclude=["experiments/*", "wandb/*"]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
numpy = "^1.26.1"
equinox = "^0.11.3"
# jax = { version = "^0.4.23", optional = true }
jax = "^0.4.23"
matplotlib = "^3.8.0"
jaxtyping = "^0.2.23"
optax = "^0.1.7"
torch = "^2.1.2"
icecream = "^2.1.3"
tqdm = "^4.66.1"
wandb = "^0.16.0"
pandas = "^2.1.4"
loguru = "^0.7.2"
fire = "^0.5.0"


[tool.ruff]
ignore = ["F722"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
