[project]
name = "kira_llm"
version = "0.1.3"
description = ""
license = "MIT"
readme = "README.md"
requires-python ="~=3.10"
authors = [
  {name = "Artur A. Galstyan", email = "mail@arturgalstyan.dev"},
]
dependencies=[
  "jax",
  "jaxlib",
  "jaxtyping",
  "tqdm",
  "beartype",
  "typing_extensions",
  "pre-commit",
  "loguru",
  "nox",
  "pytest",
  "matplotlib",
  "optax",
  "torch",
  "fire",
  "wandb",
]

[tool.ruff]
extend-include = ["*.ipynb"]
fixable = ["I001", "F401"]
ignore = ["E402", "E721", "E731", "E741", "F722"]
ignore-init-module-imports = true
select = ["E", "F", "I001"]
src = []

[tool.ruff.isort]
combine-as-imports = true
extra-standard-library = ["typing_extensions"]
lines-after-imports = 2
order-by-type = false

[tool.pyright]
reportIncompatibleMethodOverride = true
reportMissingImports = false
include = ["kira", "tests"]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["kira"]
