[project]
name = "kira_llm"
version = "0.2.0"
description = "That's right, I'm Kira ✍️"
license = "MIT"
readme = "README.md"
requires-python ="~=3.10"
authors = [
  {name = "Artur A. Galstyan", email = "mail@arturgalstyan.dev"},
]
dependencies=[
  "jax",
  "equinox",
  "jaxlib",
  "jaxtyping",
  "tqdm",
  "beartype",
  "typing_extensions",
  "pre-commit",
  "loguru",
  "nox",
  "pytest",
  "matplotlib",
  "optax",
  "jaxonloader", 
  "fire",
  "wandb",
]

[tool.ruff]
extend-include = ["*.ipynb"]
src = []

[tool.ruff.lint]
select = ["E", "F", "I001"]
fixable = ["I001", "F401"]
ignore = ["E402", "E721", "E731", "E741", "F722"]
ignore-init-module-imports = true

[tool.ruff.lint.isort]
combine-as-imports = true
extra-standard-library = ["typing_extensions"]
lines-after-imports = 2
order-by-type = false

[tool.pyright]
reportIncompatibleMethodOverride = true
reportMissingImports = false
include = ["kira", "tests"]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["kira"]
